# cobertura-console-reporter

./: .gitignore  .pylintrc  LICENSE  ccr.py  pyproject.toml  readme.md  requirements-dev.txt
.github/workflows/: publish.yml  python-app.yml  test.yml
cobertura_console_reporter/: __main__.py  coverage_item.py  formatter.py  formatter_config.py  parser.py
cobertura_parser/: __main__.py  formatter.py  parser.py
cobertura_reporter/: __main__.py  coverage_item.py  formatter.py  parser.py
sample_data/: coverage.cobertura.multi-package.xml  coverage.cobertura.no-coverage.xml  coverage.cobertura.single-package.xml  coverage.cobertura.split-classes.xml
scripts/: bootstrap.ps1  bootstrap.sh  build.ps1  build.sh  setup.sh  test.ps1  test.sh
scripts/support/: create-version-txt.ps1
tests/: test_coverage_item.py  test_formatter.py  test_parser.py
